Acrescentei mais um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque odio aspernatur alias in laudantium. In, blanditiis! Ad totam magni nisi, adipisci rerum cupiditate eos tempore harum distinctio necessitatibus atque magnam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam eius delectus id quos quisquam consequatur atque possimus sunt dolores dignissimos animi repellat molestiae, non nobis placeat minima ducimus autem. Blanditiis.</p>
 </body>
 </html>
